--- a/site/templates/index.html
+++ b/site/templates/index.html
@@ -21,6 +21,6 @@
 	}(document, 'script', 'facebook-jssdk'));</script>
   <div id="app">
   </div>
-  <script src="js/index.js"></script>
+  <script src="{{ url_for('static', filename='js/index.js') }}"></script>
 </body>
 </html>
