--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,6 +4,7 @@
 	<title>Quote</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 	<link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500' rel='stylesheet' type='text/css'>
+	<link href="{{ url_for('static', filename='media.css') }}" rel="stylesheet">
 </head>
 <body style="background-color:#00838f">
 	<div id="fb-root"></div>
