--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Quote</title>
+	<title>Experience the Science</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 	<link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500' rel='stylesheet' type='text/css'>
 	<link href="{{ url_for('static', filename='media.css') }}" rel="stylesheet">
+	<link rel="shortcut icon" href="{{ url_for('static', filename='assets/neil.ico') }}" type="image/x-icon"/>
 </head>
 <body style="background-color:#00838f">
 	<div id="fb-root"></div>
