--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,6 +3,11 @@
 <head>
 	<title>Experience the Science</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+	<meta property="og:url"           content="http://experiencethescience.com" />
+	<meta property="og:type"          content="website" />
+	<meta property="og:title"         content="Experience the Science" />
+	<meta property="og:description"   content="Words of wisdom from Neil deGrasse Tyson" />
+	<meta property="og:image"         content="{{ url_for('static', filename='assets/neil-circle.png') }}" />
 	<link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500' rel='stylesheet' type='text/css'>
 	<link href="{{ url_for('static', filename='media.css') }}" rel="stylesheet">
 	<link rel="shortcut icon" href="{{ url_for('static', filename='assets/neil.ico') }}" type="image/x-icon"/>
